# Introducao-a-Robotica

./: README.md  ros-install.sh
aula01/: README.md  aula1.py
projeto/: README.md
projeto/navegador_autonomo/: CMakeLists.txt  README.md  package.xml
projeto/navegador_autonomo/launch/: navegacao_completa.launch
projeto/navegador_autonomo/scripts/: navegador_final.py
projeto/navegador_autonomo/terminais/: 1.sh  2.sh
projeto/navegador_autonomo/worlds/: sala.world
ros/: README.md  ros-install.sh
