<?xml version="1.0"?>
<package format="2">
  <name>navegador_autonomo</name>
  <version>1.0.0</version>
  <description>
    Pacote ROS para navegação autônoma com exploração usando um TurtleBot.
  </description>

  <maintainer email="ricardoteixeirasantos@hotmail.com">Ricardo Teixeira</maintainer>
  <license>MIT</license>

  <!-- Dependência essencial para a compilação com Catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependências necessárias para a COMPILAÇÃO (build) -->
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>


  <!-- Dependências necessárias para a EXECUÇÃO (runtime) -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>turtlebot_gazebo</exec_depend>
  <exec_depend>turtlebot_rviz_launchers</exec_depend>
  <exec_depend>gmapping</exec_depend>

</package>
